The DataFrame Data Structure

--- a/week_2.ipynb
+++ b/week_2.ipynb
@@ -748,6 +748,649 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "# The DataFrame Data Structure"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cost</th>\n",
+       "      <th>Item Purchased</th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Store 1</th>\n",
+       "      <td>22.5</td>\n",
+       "      <td>Dog Food</td>\n",
+       "      <td>Chris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Store 1</th>\n",
+       "      <td>2.5</td>\n",
+       "      <td>Kitty Litter</td>\n",
+       "      <td>Kevyn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Store 2</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Bird Seed</td>\n",
+       "      <td>Vinod</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Cost Item Purchased   Name\n",
+       "Store 1  22.5       Dog Food  Chris\n",
+       "Store 1   2.5   Kitty Litter  Kevyn\n",
+       "Store 2   5.0      Bird Seed  Vinod"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "purchase_1 = pd.Series({'Name':'Chris',\n",
+    "                       'Item Purchased':'Dog Food',\n",
+    "                       'Cost':22.50})\n",
+    "purchase_2 = pd.Series({'Name':'Kevyn',\n",
+    "                       'Item Purchased':'Kitty Litter',\n",
+    "                       'Cost':2.50})\n",
+    "purchase_3 = pd.Series({'Name':'Vinod',\n",
+    "                       'Item Purchased':'Bird Seed',\n",
+    "                       'Cost':5.00})\n",
+    "df = pd.DataFrame([purchase_1,purchase_2,purchase_3],index=['Store 1','Store 1','Store 2'])\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Cost                      5\n",
+       "Item Purchased    Bird Seed\n",
+       "Name                  Vinod\n",
+       "Name: Store 2, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc['Store 2'] # Based on the row"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.series.Series"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(df.loc['Store 2']) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Store 1        Dog Food\n",
+       "Store 1    Kitty Litter\n",
+       "Store 2       Bird Seed\n",
+       "Name: Item Purchased, dtype: object"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Item Purchased'] #Based on the column"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Store 1    22.5\n",
+       "Store 1     2.5\n",
+       "Name: Cost, dtype: float64"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc['Store 1','Cost'] #Taking an attribute value in records(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Store 1</th>\n",
+       "      <th>Store 1</th>\n",
+       "      <th>Store 2</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Cost</th>\n",
+       "      <td>22.5</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Item Purchased</th>\n",
+       "      <td>Dog Food</td>\n",
+       "      <td>Kitty Litter</td>\n",
+       "      <td>Bird Seed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Name</th>\n",
+       "      <td>Chris</td>\n",
+       "      <td>Kevyn</td>\n",
+       "      <td>Vinod</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                 Store 1       Store 1    Store 2\n",
+       "Cost                22.5           2.5          5\n",
+       "Item Purchased  Dog Food  Kitty Litter  Bird Seed\n",
+       "Name               Chris         Kevyn      Vinod"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Store 1    22.5\n",
+       "Store 1     2.5\n",
+       "Store 2       5\n",
+       "Name: Cost, dtype: object"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.T.loc['Cost']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Store 1    22.5\n",
+       "Store 1     2.5\n",
+       "Store 2     5.0\n",
+       "Name: Cost, dtype: float64"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Cost'] #above and this produces the same result"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Store 1    22.5\n",
+       "Store 1     2.5\n",
+       "Name: Cost, dtype: float64"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc['Store 1']['Cost'] #Chaining"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Cost</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Store 1</th>\n",
+       "      <td>Chris</td>\n",
+       "      <td>22.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Store 1</th>\n",
+       "      <td>Kevyn</td>\n",
+       "      <td>2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Store 2</th>\n",
+       "      <td>Vinod</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          Name  Cost\n",
+       "Store 1  Chris  22.5\n",
+       "Store 1  Kevyn   2.5\n",
+       "Store 2  Vinod   5.0"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.loc[:,['Name','Cost']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cost</th>\n",
+       "      <th>Item Purchased</th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Store 2</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Bird Seed</td>\n",
+       "      <td>Vinod</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Cost Item Purchased   Name\n",
+       "Store 2   5.0      Bird Seed  Vinod"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.drop('Store 1') #drop records and return a copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cost</th>\n",
+       "      <th>Item Purchased</th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Store 2</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Bird Seed</td>\n",
+       "      <td>Vinod</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Cost Item Purchased   Name\n",
+       "Store 2   5.0      Bird Seed  Vinod"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "copy_df = df.copy()\n",
+    "copy_df = copy_df.drop('Store 1')\n",
+    "copy_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cost</th>\n",
+       "      <th>Item Purchased</th>\n",
+       "      <th>Name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Store 1</th>\n",
+       "      <td>22.5</td>\n",
+       "      <td>Dog Food</td>\n",
+       "      <td>Chris</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Store 1</th>\n",
+       "      <td>2.5</td>\n",
+       "      <td>Kitty Litter</td>\n",
+       "      <td>Kevyn</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Store 2</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Bird Seed</td>\n",
+       "      <td>Vinod</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Cost Item Purchased   Name\n",
+       "Store 1  22.5       Dog Food  Chris\n",
+       "Store 1   2.5   Kitty Litter  Kevyn\n",
+       "Store 2   5.0      Bird Seed  Vinod"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "del copy_df['Name'] # drop an attribute usign del keyword\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Cost</th>\n",
+       "      <th>Item Purchased</th>\n",
+       "      <th>Name</th>\n",
+       "      <th>Location</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Store 1</th>\n",
+       "      <td>22.5</td>\n",
+       "      <td>Dog Food</td>\n",
+       "      <td>Chris</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Store 1</th>\n",
+       "      <td>2.5</td>\n",
+       "      <td>Kitty Litter</td>\n",
+       "      <td>Kevyn</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Store 2</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>Bird Seed</td>\n",
+       "      <td>Vinod</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Cost Item Purchased   Name Location\n",
+       "Store 1  22.5       Dog Food  Chris     None\n",
+       "Store 1   2.5   Kitty Litter  Kevyn     None\n",
+       "Store 2   5.0      Bird Seed  Vinod     None"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Location'] = None #adding a new attribute\n",
+    "df"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
